# gpui-kbar

./: .gitignore  AGENTS.md  Cargo.toml  README.md  pyproject.toml
app/: Cargo.toml
app/src/: input.rs  main.rs  runtime.rs
core/: Cargo.toml
core/examples/: dump_cache.rs
core/src/: error.rs  lib.rs  load.rs  resample.rs  store.rs  types.rs
dev/: Cargo.toml
dev/src/: main.rs
docs/: live-data-dev.md
docs/wiki/: loading-spinner-stall.md
plans/: temp-loading-spinner-tests.md
plans/candlestick-gpui/: PLAN.md  milestone-1.md  milestone-10.md  milestone-11.md  milestone-12.md  milestone-2.md  milestone-3.md  milestone-4.md  milestone-5.md  milestone-6.md  milestone-7.md  milestone-8.md  milestone-9.md  milestone-core-loaders.md  next-step.md
plans/candlestick-gpui/core/: history.md  milestone-2.md  milestone-4.md
plans/runtime-plugins-live-data/: README.md  indicator-plugins.md  live-data-bridge.md
scripts/: generate_kbar.py  generate_universe.py
ui/: Cargo.toml
ui/src/: assets.rs  lib.rs  live.rs  logging.rs  perf.rs  runtime.rs  store.rs
ui/src/chart/: aggregation.rs  canvas.rs  error_view.rs  footer.rs  header.rs  mod.rs  view.rs
ui/src/chart/view/: context.rs  interactions.rs  mod.rs  overlay.rs  render.rs  state.rs  widgets.rs
ui/src/chart/view/overlays/: interval_menu.rs  mod.rs  settings.rs  symbol_search.rs
ui/src/chart/view/sections/: body.rs  header.rs  layout.rs  mod.rs  sidebar.rs  watchlist.rs
ui/src/components/: button_effect.rs  close_button.rs  loading_sand.rs  mod.rs  remove_button.rs
ui/src/data/: mod.rs  symbols.rs  universe.rs
