[workspace]
members = ["core", "ui", "app"]
resolver = "3"

[workspace.package]
version = "0.0.0"
authors = ["JacobX <jacobbishopxy@gmail.com>"]
edition = "2024"
repository = "https://github.com/Jacobbishopxy/gpui-kbar"

[workspace.dependencies]
gpui = { version = "0" }
polars = { version = "0.52", features = [
    "lazy",
    "csv",
    "parquet",
    "dtype-datetime",
    "timezones",
] }
time = { version = "0.3", features = ["formatting", "macros", "parsing"] }
anyhow = "1"
thiserror = "2"
clap = { version = "4.5", features = ["derive"] }
