[workspace]
members = ["core", "ui", "app", "dev"]
resolver = "3"

[workspace.package]
version = "0.0.0"
authors = ["JacobX <jacobbishopxy@gmail.com>"]
edition = "2024"
repository = "https://github.com/Jacobbishopxy/gpui-kbar"

[workspace.dependencies]
gpui = { version = "0" }
gpui-component = { version = "0.5" }
tokio = { version = "1", features = [
    "macros",
    "rt-multi-thread",
    "time",
    "sync",
] }
zeromq = { version = "0.4.1", default-features = false, features = [
    "tokio-runtime",
    "tcp-transport",
] }
flatbuffers = "25"
polars = { version = "0.52", features = [
    "lazy",
    "csv",
    "parquet",
    "dtype-datetime",
    "timezones",
] }
time = { version = "0.3", features = ["formatting", "macros", "parsing"] }
anyhow = "1"
thiserror = "2"
clap = { version = "4.5", features = ["derive"] }
duckdb = { version = "1.4.3", features = ["bundled"] }
flux-schema = { git = "https://github.com/Jacobbishopxy/flux.git", branch = "master" }
