[package]
name = "dev"
version = "0.0.0"
edition = "2024"

[dependencies]
gpui = { workspace = true }
gpui-component = { workspace = true }
polars = { workspace = true }
anyhow = { workspace = true }
time = { workspace = true }
ui = { path = "../ui" }
kbar_core = { package = "core", path = "../core" }
clap = { workspace = true }
flux-schema = { workspace = true }
flatbuffers = { workspace = true }
tokio = { workspace = true }
zeromq = { workspace = true }
csv = "1.3"
